...
        textView.text = ""
    }
    
    
    // MARK: - Methods
    private func makeAlertVC(message: String) -> UIAlertController {
        let alertVC = UIAlertController(title: "Zéro!", message: message, preferredStyle: .alert)
        alertVC.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
        return alertVC
    }
}

